--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^1.0.0",
     "firebase": "^5.3.1",
     "formik": "^1.0.2",
+    "history": "^4.7.2",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
