--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "react/jsx-boolean-value": 0,
     "react/destructuring-assignment": [ 0, "always", { "ignoreClassFields": true }],
     "react/jsx-indent": [ 2, 2 ],
+    "react/no-danger": "off",
     "semi": "off"
   }
 }
