--- a/package.json
+++ b/package.json
@@ -1,41 +1,22 @@
 {
-  "name": "darters-app",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "build": "webpack --mode=production",
-    "dev-server": "webpack-dev-server --mode=development"
-  },
+  "name": "poster-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.0",
     "firebase": "^5.3.1",
     "formik": "^1.0.2",
     "history": "^4.7.2",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
-    "react": "^16.4.2",
+    "react": "^16.5.1",
     "react-dates": "^17.1.1",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.5.1",
+    "react-scripts": "1.1.5",
     "react-redux": "^5.0.7",
-    "react-remarkable": "^1.1.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
     "yup": "^0.26.2"
   },
   "devDependencies": {
@@ -43,6 +24,13 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "live-server": "^1.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
