--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
     "firebase": "^5.3.1",
     "formik": "^1.0.2",
     "history": "^4.7.2",
@@ -11,10 +13,10 @@
     "react": "^16.5.1",
     "react-dates": "^17.1.1",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "yup": "^0.26.2"
